# chassis

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: ci.yaml
crates/chassis-core/: Cargo.toml
crates/chassis-core/src/: config.rs  error.rs  lib.rs  router.rs  server.rs  shutdown.rs  state.rs
crates/chassis-core/src/auth/: authenticator.rs  extractor.rs  jwt.rs  mod.rs  subject.rs
crates/chassis-core/src/model/: mod.rs
crates/chassis-core/src/model/responses/: echo_response.rs  greet_response.rs  mod.rs
crates/chassis-core/src/routes/: echo.rs  greet.rs  hello.rs  livez.rs  metrics.rs  mod.rs  not_found.rs  readyz.rs
crates/chassis-core/src/telemetry/: init.rs  mod.rs  otel.rs  request_span.rs
crates/chassis-server/: Cargo.toml
crates/chassis-server/src/: main.rs
deploy/: Chart.yaml  values.yaml
