[workspace]
resolver = "3"
members = [
    "crates/chassis-core",
    "crates/chassis-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# http server
axum = "0.8"
# async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tokio-util = "0.7"
# logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# http middleware
tower-http = { version = "0.6", features = ["trace", "timeout", "limit", "compression-full", "request-id"] }
# json serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# error handling
thiserror = "2"
anyhow = "1"
# auth
jsonwebtoken = "9"
# metrics
axum-prometheus = "0.10"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
# distributed tracing
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.32"
# internal
chassis-core = { path = "crates/chassis-core" }

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
